--- a/docs/index.Rmd
+++ b/docs/index.Rmd
@@ -146,7 +146,7 @@ Lastly, this paper is interested in finding the associations between different n
 ##### **Table II. Spatial Lag Regressions for Law Enforcement Outcomes in the City of Los Angeles**
 ```{r, echo = FALSE}
 
-knitr::include_graphics("/Users/joshuacantong/Desktop/Academics/Spring 2022/SSCI 574/Programming/Results/spatial lag model table.png")
+knitr::include_graphics("/Users/joshuacantong/Desktop/Academics/Spring 2022/SSCI 574/Programming/Results/spatial lag model table_v2.png")
 
 ```
 
@@ -154,7 +154,7 @@ knitr::include_graphics("/Users/joshuacantong/Desktop/Academics/Spring 2022/SSCI
 ##### **Table III. Impacts for Stop Rate SLM in the City of Los Angeles**
 ```{r, echo = FALSE}
 
-knitr::include_graphics("/Users/joshuacantong/Desktop/Academics/Spring 2022/SSCI 574/Programming/Results/stop rate impact table_v2.png")
+knitr::include_graphics("/Users/joshuacantong/Desktop/Academics/Spring 2022/SSCI 574/Programming/Results/stop rate impact table_v3.png")
 
 ```
 
@@ -162,7 +162,7 @@ knitr::include_graphics("/Users/joshuacantong/Desktop/Academics/Spring 2022/SSCI
 ##### **Table IV. Impacts for Citation Rate SLM in the City of Los Angeles**
 ```{r, echo = FALSE}
 
-knitr::include_graphics("/Users/joshuacantong/Desktop/Academics/Spring 2022/SSCI 574/Programming/Results/citation rate impact table_v2.png")
+knitr::include_graphics("/Users/joshuacantong/Desktop/Academics/Spring 2022/SSCI 574/Programming/Results/citation rate impact table_v3.png")
 
 ```
 
@@ -170,13 +170,13 @@ knitr::include_graphics("/Users/joshuacantong/Desktop/Academics/Spring 2022/SSCI
 ##### **Table V. Impacts for Search Rate SLM in the City of Los Angeles**
 ```{r, echo = FALSE}
 
-knitr::include_graphics("/Users/joshuacantong/Desktop/Academics/Spring 2022/SSCI 574/Programming/Results/search rate impact table_v2.png")
+knitr::include_graphics("/Users/joshuacantong/Desktop/Academics/Spring 2022/SSCI 574/Programming/Results/search rate impact table_v3.png")
 
 ```
 
-The largest finding from these results is that there are positive associations for Black and Latinx populations across stops and searches. This means that as a census tracts’ share or Black residents increases, or as a census tracts’ share of Latinx residents increases, there is an increase in the rate of residents stopped, as well as an increase in the rate of residents searched––controlling for other variables. Furthermore, the analysis reveals that poverty rate is also positively associated with all three law enforcement rates included in the study. There are, furthermore, negative associations with the women population share of a tract, as well as the renter household share of a tract.
+The largest finding from these results is that there are positive associations for Black and Latinx populations across stops and searches. This means that as a census tracts’ share or Black residents increases, or as a census tracts’ share of Latinx residents increases, there is an increase in the rate of residents stopped, as well as an increase in the rate of residents searched––controlling for other variables. Furthermore, the analysis reveals that poverty rate is also positively associated with all three law enforcement rates included in the study. The last positive association found in this analysis is for renter households -- there appears to be a relationship to tenancy and the spatial associations of law enforcement associated outcomes. On the other hand, there are negative associations with the women population share of a tract, as well as with population density, when accounting for the other variables in the regression.
 
-The impact analysis reveals the direct effects and indirect effects entailed across our independent variables. The impact results for stops and citations leads to an interesting finding: while there is a negative association with renter household share and stop rate and citation rate, it appears that this negative association is due to the indirect effect of the average share of census tracts’ around an individual geography. How does this work in practice? We might read it as such: the negative association with renter household share and stop/citation rates are related to a given tract’s neighbors and their share of renter households, and not necessarily strongly related to the renter household share of a reference tract. It seems that there’s an indirect suppressive effect related to renter household share––at least when controlling for other variables. Another interesting findings is related to how the direct and indirect effects of poverty rate change across the citation and search rate models. While both models have a positive association with poverty rate, it appears that citation rates have a large indirect effect, while poverty rate has a large direct effect. 
+The impact analysis reveals the direct effects and indirect effects entailed across our independent variables. Including the impact effects is important because the spatial lag regression pick up on the influence of spatial dependence in the way that our policing variables are related to the average census tracts. Without including the impact analysis within the context of our spatial lag regression, in this instance, the coefficients entailed in the analysis can't be interpreted in a straightforward manner (as it would be incorrect to view a given coefficient as merely a direct result of the dependent variable on the independent variable -- rather, the indirect effect of spatial dependence needs to be taken into account). The impact results for stops and citations leads to an interesting finding: I) there are generally even direct and indirect effects across population density, black population, median age, and women population with our law enforcement outcome variables, and II) on the other hand, there are relatively large indirect effects across the latinx population, poverty rate and renter household share variables with our law enforcement outcome variables. What's the meaning of these large indirect effects in the latter case? A simple way to interpret this is that the positive relationship between latinx population, poverty and tenancy share and any given law enforcement outcome (depending on the variable: stop, citation and/or search rates) are generally greatly influenced by the field of neighbors that surround a given geographic unit. For example, the positive association between latinx population and citation rates is generally associated with a geographic unit that's clustered among other geographic units with higher latinx populatin shares. Similarly, the positive relationship between tenancy/renter household share and stop and citation rates is generally related to geographic units that are surrounded by other neighbors with higher rates of renter household. The indirect effect of spatial dependence then has a higher influence on the coefficient than the direct effect of a tracts' demographics or makeup. Why is this important? This finding speaks towards the way that police resources and the negative impacts of over-policing are deployed across the city greatly influenced by the presence of spatial clusters of poor communities of color with higher rates or renters. In the instance of search rates, the direct effect of poverty on search rate speaks towards the way in which historically disinvested communities are directly disposed to a disparity in search practice entailed in the stop -- which makes instances of violence and uptake into the criminal-legal system more likely. These findings then speak towards the way that tenancy, class and race are related to policing and forms of material, embodied, and psychic difference that are products of the policing apparatus. 
 
 In turning to the Akaike Information Criterion (AIC) analysis, which allows us to see the goodness of fit across our different models, or the degree to which a model describes the actual data generating process, it’s apparent that the search model is the most predictive, while the stop and citation models trail in their efficacy. The AIC for the search rate model is 2,085; the AIC for the stop rate model is 2,380; and the AIC for the citation rate model is 2,828. Another factor related to evaluating these AICs is that the different dependent variable may hinder the use of the AIC to compare across the models, but in running OLS models prior to the Spatial Lag Models and observing the relative difference of adjusted R^2, it seems that the level of fit across models carries over with the AIC figures. Why might the search model be more predictive while the citation model may be less predictive? If this result is viewed in context with the Getis-Ord Gi* analysis, then we might understand the difference of fit across these dependent variables. The search rate hot spot analysis showed a strong clustering of hot spots in South LA, which is a Black-Latinx geography; on the other hand, the citation rate model showed very minimal and the least amount of clustering across the whole city, in relation to the other dependent variable maps. While we know that racial profiling occurs and impacts Black drivers predominantly, and Latinx drivers significantly as well––these findings allow us to see that citation disparity may have a larger disparity at the level of the individual/body, and not at the geographic aggregate. On the other hand, our findings reveal that search rates have both a disparity at the scale of the individual, as well as a disparity at the scale of the geographic aggregate. 
 
